tests/baselines/reference/methodsReturningThis.types
=== tests/cases/conformance/salsa/input.js ===
function Class()
>Class : typeof Class
{
}

// error: 'Class' doesn't have property 'notPresent'
Class.prototype.containsError = function () { return this.notPresent; };
>Class.prototype.containsError = function () { return this.notPresent; } : () => any
>Class.prototype.containsError : () => any
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>containsError : () => any
>function () { return this.notPresent; } : () => any
>this.notPresent : any
>this : typeof Class.prototype
>notPresent : any

// lots of methods that return this, which caused out-of-memory in #9527
Class.prototype.m1 = function (a, b, c, d, tx, ty) { return this; };
>Class.prototype.m1 = function (a, b, c, d, tx, ty) { return this; } : (a: any, b: any, c: any, d: any, tx: any, ty: any) => typeof Class.prototype
>Class.prototype.m1 : (a: any, b: any, c: any, d: any, tx: any, ty: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m1 : (a: any, b: any, c: any, d: any, tx: any, ty: any) => typeof Class.prototype
>function (a, b, c, d, tx, ty) { return this; } : (a: any, b: any, c: any, d: any, tx: any, ty: any) => typeof Class.prototype
>a : any
>b : any
>c : any
>d : any
>tx : any
>ty : any
>this : typeof Class.prototype

Class.prototype.m2 = function (x, y) { return this; };
>Class.prototype.m2 = function (x, y) { return this; } : (x: any, y: any) => typeof Class.prototype
>Class.prototype.m2 : (x: any, y: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m2 : (x: any, y: any) => typeof Class.prototype
>function (x, y) { return this; } : (x: any, y: any) => typeof Class.prototype
>x : any
>y : any
>this : typeof Class.prototype

Class.prototype.m3 = function (x, y) { return this; };
>Class.prototype.m3 = function (x, y) { return this; } : (x: any, y: any) => typeof Class.prototype
>Class.prototype.m3 : (x: any, y: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m3 : (x: any, y: any) => typeof Class.prototype
>function (x, y) { return this; } : (x: any, y: any) => typeof Class.prototype
>x : any
>y : any
>this : typeof Class.prototype

Class.prototype.m4 = function (angle) { return this; };
>Class.prototype.m4 = function (angle) { return this; } : (angle: any) => typeof Class.prototype
>Class.prototype.m4 : (angle: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m4 : (angle: any) => typeof Class.prototype
>function (angle) { return this; } : (angle: any) => typeof Class.prototype
>angle : any
>this : typeof Class.prototype

Class.prototype.m5 = function (matrix) { return this; };
>Class.prototype.m5 = function (matrix) { return this; } : (matrix: any) => typeof Class.prototype
>Class.prototype.m5 : (matrix: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m5 : (matrix: any) => typeof Class.prototype
>function (matrix) { return this; } : (matrix: any) => typeof Class.prototype
>matrix : any
>this : typeof Class.prototype

Class.prototype.m6 = function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; };
>Class.prototype.m6 = function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; } : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => typeof Class.prototype
>Class.prototype.m6 : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m6 : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => typeof Class.prototype
>function (x, y, pivotX, pivotY, scaleX, scaleY, rotation, skewX, skewY) { return this; } : (x: any, y: any, pivotX: any, pivotY: any, scaleX: any, scaleY: any, rotation: any, skewX: any, skewY: any) => typeof Class.prototype
>x : any
>y : any
>pivotX : any
>pivotY : any
>scaleX : any
>scaleY : any
>rotation : any
>skewX : any
>skewY : any
>this : typeof Class.prototype

Class.prototype.m7 = function(matrix) { return this; };
>Class.prototype.m7 = function(matrix) { return this; } : (matrix: any) => typeof Class.prototype
>Class.prototype.m7 : (matrix: any) => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m7 : (matrix: any) => typeof Class.prototype
>function(matrix) { return this; } : (matrix: any) => typeof Class.prototype
>matrix : any
>this : typeof Class.prototype

Class.prototype.m8 = function() { return this; };
>Class.prototype.m8 = function() { return this; } : () => typeof Class.prototype
>Class.prototype.m8 : () => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m8 : () => typeof Class.prototype
>function() { return this; } : () => typeof Class.prototype
>this : typeof Class.prototype

Class.prototype.m9 = function () { return this; };
>Class.prototype.m9 = function () { return this; } : () => typeof Class.prototype
>Class.prototype.m9 : () => typeof Class.prototype
>Class.prototype : typeof Class.prototype
>Class : typeof Class
>prototype : typeof Class.prototype
>m9 : () => typeof Class.prototype
>function () { return this; } : () => typeof Class.prototype
>this : typeof Class.prototype


